// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source no_pragma.4gl 1`] = `
main 
  display "hello "
end main
----------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
`;

exports[`Source pragma.4gl 1`] = `
--@format
main 
  display "hello "
end main
----------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
`;
